# moneyPrinter

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  conftest.py  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml
execution/: Cargo.toml  README.md
execution/.cargo/: config.toml
execution/execution-bin/: Cargo.toml
execution/execution-bin/src/: bus.rs  config.rs  lib.rs  lifecycle.rs  main.rs  reconcile.rs
execution/execution-bin/tests/: config_lifecycle.rs  integration_redis.rs
execution/execution-core/: Cargo.toml
execution/execution-core/src/: error.rs  lib.rs  mock.rs  types.rs  venue.rs
execution/execution-core/tests/: mock_behaviour.rs  types_contract.rs
execution/execution-smarkets/: Cargo.toml
execution/execution-smarkets/src/: client.rs  lib.rs
execution/execution-smarkets/tests/: rate_limit.rs
execution/references/execution-smarkets/src/: endpoints.rs  error.rs  lib.rs  rate_limit.rs  venue_impl.rs
execution/references/execution-smarkets/tests/: client_auth.rs
services/backtest_engine/: pyproject.toml
services/backtest_engine/src/backtest_engine/: __init__.py  harness.py  metrics.py  param_sweep.py  promotion_gate.py  regimes.py  significance.py  strategy_protocol.py  validate.py  walkforward.py
services/backtest_engine/src/backtest_engine/sources/: __init__.py  archive.py  synthetic.py
services/backtest_engine/src/backtest_engine/strategies/: __init__.py  _notick.py  mean_reversion.py  trivial.py
services/backtest_engine/tests/: conftest.py  test_harness.py  test_harness_metrics.py  test_metrics.py  test_param_sweep.py  test_promotion_gate.py  test_regimes.py  test_significance.py  test_sources.py  test_validate.py  test_validation_metrics.py  test_walkforward.py
services/backtest_engine/tests/fixtures/: always_back_below_two.py
services/backtest_engine/tests/strategies/: test_mean_reversion.py
services/common/: pyproject.toml
services/common/src/algobet_common/: __init__.py  bus.py  config.py  db.py  parsing.py  schemas.py
services/common/tests/: conftest.py  test_bus.py  test_config.py  test_db.py  test_migrate.py  test_schemas.py
services/dashboard/: pyproject.toml
services/dashboard/src/dashboard/: __main__.py  app.py  dependencies.py  schemas.py
services/dashboard/src/dashboard/auth/: __init__.py  crud.py  csrf.py  dependencies.py  models.py  passwords.py  rate_limit.py  routes.py  sessions.py
services/dashboard/src/dashboard/routers/: risk.py  strategies.py
services/dashboard/tests/: conftest.py  test_auth_crud.py  test_auth_csrf.py  test_auth_passwords.py  test_auth_rate_limit.py  test_auth_routes.py  test_auth_sessions.py  test_routes.py
services/ingestion/: Dockerfile  pyproject.toml
services/ingestion/src/ingestion/: __init__.py  __main__.py  betfair_adapter.py  historical_loader.py  kalshi_adapter.py  polymarket_adapter.py
services/ingestion/tests/: conftest.py  test_betfair_adapter.py  test_hello.py  test_historical_loader.py  test_kalshi_adapter.py  test_polymarket_adapter.py
services/research_orchestrator/: CRON.md  README.md  pyproject.toml
services/research_orchestrator/src/research_orchestrator/: __main__.py  ast_validator.py  config.py  context_builder.py  errors.py  features.py  llm_client.py  runner.py  sandbox_runner.py  schemas.py  spend_tracker.py  types.py  wiki_writer.py  workflow.py
services/research_orchestrator/src/research_orchestrator/prompts/: codegen_system.md  ideation_system.md  strategy_template.md
services/research_orchestrator/tests/: conftest.py  test_ast_validator.py  test_cli.py  test_context_builder.py  test_llm_client.py  test_runner_integration.py  test_sandbox_runner.py  test_spend_tracker.py  test_wiki_writer.py  test_workflow.py  test_workflow_hypothesize.py
services/research_orchestrator/tests/fixtures/adversarial_modules/: __init__.py  adv_cpu_spin.py  adv_ctypes.py  adv_dunder_import_os.py  adv_infinite_generator.py  adv_mem_balloon.py  adv_nested_class_side_effect.py  adv_open_passwd.py  adv_pickle_rce.py  adv_socket_connect.py  adv_subprocess_fork_bomb.py
services/research_orchestrator/tests/fixtures/llm_cassettes/: codegen_bollinger_reversion.json  codegen_book_imbalance_fade.json  codegen_microprice_drift.json  codegen_spread_capture.json  ideation_default.json  ideation_malformed.json
services/research_orchestrator/tests/fixtures/validator_allowed/: allow_aug_assign.py  allow_binop_chain.py  allow_compare_chain.py  allow_dict_literal.py  allow_fstring.py  allow_if_chain.py  allow_if_expr.py  allow_is_none_check.py  allow_list_literal.py  allow_math_import.py  allow_mean_reversion_pure.py  allow_pass_body.py  allow_return_none.py  allow_statistics_import.py  allow_subscript_read.py  allow_tuple_unpack.py
services/research_orchestrator/tests/fixtures/validator_rejected/: reject_assert.py  reject_async_for.py  reject_async_func_def.py  reject_async_with.py  reject_attribute_target_assign.py  reject_await.py  reject_call_in_default.py  reject_class_def.py  reject_compile_call.py  reject_comprehension_side_effect.py  (+26 more)
services/risk_manager/: Dockerfile  pyproject.toml
services/risk_manager/src/risk_manager/: __main__.py  engine.py  rules.py
services/risk_manager/tests/: conftest.py  test_engine_integration.py  test_rules.py
services/simulator/: Dockerfile  pyproject.toml
services/simulator/src/simulator/: __init__.py  __main__.py  book.py  engine.py  fills.py  persistence.py
services/simulator/tests/: conftest.py  test_book.py  test_engine.py  test_fills.py  test_persistence.py
services/strategy_registry/: README.md  pyproject.toml
services/strategy_registry/src/strategy_registry/: __init__.py  crud.py  errors.py  models.py  transitions.py  wiki_loader.py
services/strategy_registry/tests/: conftest.py  test_crud.py  test_liability.py  test_transitions.py  test_wiki_loader.py
services/strategy_runner/: Dockerfile  pyproject.toml
services/strategy_runner/src/strategy_runner/: __init__.py  __main__.py  engine.py
services/strategy_runner/tests/: test_engine.py
(+98 files in other folders)
