[package]
name = "execution-bin"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
execution-core = { path = "../execution-core" }
execution-smarkets = { path = "../execution-smarkets" }
fred = { version = "9", features = ["enable-rustls"] }
rust_decimal = { version = "1.36", features = ["serde-with-str"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.36", features = ["serde-with-str"] }
tokio = { version = "1", features = ["full", "test-util"] }
