[package]
name = "execution-core"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = ["mock"]
mock = ["dep:tokio"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.36", features = ["serde-with-str"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync", "test-util", "time"] }
