[package]
name = "execution-smarkets"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
execution-core = { path = "../execution-core" }
governor = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
static_assertions = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time"] }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt", "test-util", "time"] }
rust_decimal = { version = "1.36", features = ["serde-with-str"] }
