[project]
name = "backtest-engine"
version = "0.0.1"
requires-python = ">=3.12,<3.13"
dependencies = [
    "algobet-common",
    "simulator",
    "strategy-registry",
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "jinja2>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backtest_engine"]

[tool.uv.sources]
algobet-common = { workspace = true }
simulator = { workspace = true }
strategy-registry = { workspace = true }
