[project]
name = "algobet-common"
version = "0.0.1"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "redis>=5.2",
    "asyncpg>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/algobet_common"]
