[project]
name = "research-orchestrator"
version = "0.0.1"
requires-python = ">=3.12,<3.13"
dependencies = [
    "algobet-common",
    "backtest-engine",
    "strategy-registry",
    "typer>=0.12",
    "openai>=1.54",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_orchestrator"]

[project.scripts]
orchestrator = "research_orchestrator.__main__:app"

[tool.uv.sources]
algobet-common = { workspace = true }
backtest-engine = { workspace = true }
strategy-registry = { workspace = true }
