[project]
name = "risk-manager"
version = "0.0.1"
requires-python = ">=3.12,<3.13"
dependencies = [
    "algobet-common",
    "strategy-registry",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/risk_manager"]

[tool.uv.sources]
algobet-common = { workspace = true }
strategy-registry = { workspace = true }
