[project]
name = "strategy-runner"
version = "0.0.1"
requires-python = ">=3.12,<3.13"
dependencies = [
    "algobet-common",
    "backtest-engine",
    "strategy-registry",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/strategy_runner"]

[tool.uv.sources]
algobet-common = { workspace = true }
backtest-engine = { workspace = true }
strategy-registry = { workspace = true }
